# genlayer-secrets

./: .gitignore  README.md  pyproject.toml
contracts/: weather_secure.py
docs/: usage.md
genlayer_secrets/: cli.py  secrets.py
genlayer_secrets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
genlayer_secrets/templates/: weather.py
